Added primary method and refactoring